[gd_scene load_steps=6 format=3 uid="uid://dpvnvxtcv8fe8"]

[ext_resource type="Script" path="res://actors/player/player.gd" id="1_vkeew"]
[ext_resource type="Texture2D" uid="uid://co8yw4r3qqqwh" path="res://actors/player/ball.png" id="2_plcyq"]
[ext_resource type="Texture2D" uid="uid://cuyfdq4au25nv" path="res://actors/player/spikes.png" id="3_7wf4d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pqu5h"]
size = Vector2(42, 42)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nf0o3"]
size = Vector2(60, 500)

[node name="Player" type="Area2D"]
collision_layer = 0
collision_mask = 16
script = ExtResource( "1_vkeew" )

[node name="SpriteBall" type="Sprite2D" parent="."]
texture = ExtResource( "2_plcyq" )

[node name="SpriteSpikes" type="Sprite2D" parent="."]
texture = ExtResource( "3_7wf4d" )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( "RectangleShape2D_pqu5h" )

[node name="CheckArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckArea"]
position = Vector2(0, -270)
shape = SubResource( "RectangleShape2D_nf0o3" )

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.25

[connection signal="area_entered" from="CheckArea" to="." method="_on_check_area_area_entered"]
[connection signal="area_exited" from="CheckArea" to="." method="_on_check_area_area_exited"]
[connection signal="timeout" from="FlashTimer" to="." method="_on_flash_timer_timeout"]
